Fix post spacing

--- a/Mock Examples/style.css
+++ b/Mock Examples/style.css
@@ -121,19 +121,21 @@ a:focus {
 }
 .post-title{
   flex: 1 1 auto;
+  margin: 5px;
 }
 .post-price {
-  flex: 0 1 content;
+  flex: 0 0 auto;
   float:right;
   border: 5px solid #00ff00;
   border-radius: 10px;
   background-color: #04BB10;
   padding: 5px;
-  margin:5px;
+  margin:0px;
   color: #ffffff;
-  font-size:15;
+  font-size:20px;
   font-weight:700;
 }
+
 .post-content {
   padding: 0px 20px 5px 20px;
 }
